Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50074

QMetaObjectPublisher do not remove all transport dependencies

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Some future release
    • WebChannel
    • None
    • I used qtwebchannel from github repository in dev branch

    Description

      If an object (lets name it A) is returned by a function A is saved in wrappedObjects. But if the website reloads and A stays in memory the transports-vector of As ObjectInfo wrapper is not updated. So in this vector the deleted transport-object pointer keeps saved. Now if in A a property changes the application crashes because in QMetaObjectPublisher::sendPendingPropertyUpdates the deleted transport-objects is tried to be used.

      So if a transport-object is added to wrappedObjects in QMetaObjectPublisher::wrapResults it is needed to connect the transports destroyed signal to a function which removes the transport-object from ObjectInfo::transports.

      Attachments

        For Gerrit Dashboard: QTBUG-50074
        # Subject Branch Project Status CR V

        Activity

          People

            milianw Milian Wolff
            Psy-Kai Kai Dohmen
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes