src/webchannel/qmetaobjectpublisher.cpp
@@ -449,6 +449,29 @@ void QMetaObjectPublisher::objectDestroyed(const QObject *object)
     pendingPropertyUpdates.remove(object);
 }
 
+void QMetaObjectPublisher::transportRemoved(QWebChannelAbstractTransport *transport)
+{
+    auto it = transportedWrappedObjects.find(transport);
+    // It is not allowed to modify a container while iterating over it. So save
+    // objects which should be removed and call objectDestroyed() on them later.
+    QVector<QObject*> objectsForDeletion;
+    while (it != transportedWrappedObjects.end() && it.key() == transport) {
+        if (wrappedObjects.contains(it.value())) {
+            QVector<QWebChannelAbstractTransport*> &transports = wrappedObjects[it.value()].transports;
+            transports.removeOne(transport);
+            if (transports.isEmpty())
+                objectsForDeletion.append(wrappedObjects[it.value()].object);
+        }
+
+        it++;
+    }
+
+    transportedWrappedObjects.remove(transport);
+
+    foreach (QObject *obj, objectsForDeletion)
+        objectDestroyed(obj);
+}
+
 // NOTE: transport can be a nullptr
 //       in such a case, we need to ensure that the property is registered to
 //       the target transports of the parentObjectId
@@ -480,6 +503,7 @@ QJsonValue QMetaObjectPublisher::wrapResult(const QVariant &result, QWebChannelA
                     oi.transports = webChannel->d_func()->transports;
             }
             wrappedObjects.insert(id, oi);
+            transportedWrappedObjects.insert(transport, id);
 
             initializePropertyUpdates(object, classInfo);
         } else if (wrappedObjects.contains(id)) {
